# gaussian-wrangler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gaussian_wrangler/: gaussian.py
src/gaussian_wrangler/file_handling/: np_to_gaussian.py  ply_to_npz.py
src/gaussian_wrangler/graphics/: render.py
tests/: test_rendering.py  test_voxelisation.py
