[build-system]
requires = ["setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "gaussian_wrangler" # REQUIRED, is the only field that cannot be marked as dynamic.

version = "0.0.0" # REQUIRED, although can be dynamic

description = "A project for dealing with Gaussian splats"

readme = "readme.md"

requires-python = ">=3.9"

license = { file = "LICENSE" }

keywords = ["inverse_rendering"]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [{ name = "Felix O'Mahony", email = "felixomahony@gmail.com" }]


classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy",
  "scipy",
  "plyfile",
]

[tool.setuptools]